# plGeoAdaptels

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: grow_seeds_guide.md
examples/: quickstart.py
plgeoadaptels/: __init__.py  __main__.py  adaptels.py  cli.py  core.py  grow.py  io.py  sicle.py  test_adaptels.py  vectorize.py
tests/: test_console_ascii.py  test_grow_seeds.py  test_plgeoadaptels.py  test_python39_compat.py  test_version_consistency.py
