[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plgeoadaptels"
version = "0.2.1"
description = "Scale-Adaptive Superpixels (Adaptels) for geospatial raster data"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Igor Pawelec"},
]
keywords = ["superpixels", "adaptels", "segmentation", "geospatial", "raster", "GIS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Dependencies intentionally left empty.
# In conda environments pip can break native libraries (GDAL, PROJ).
# Install manually:  conda install -c conda-forge numpy numba rasterio fiona
dependencies = []

[project.optional-dependencies]
# All core deps — install via conda, not pip!
all = ["numpy>=1.21", "numba>=0.56", "rasterio>=1.3", "fiona>=1.9"]

# NOTE: geopandas and shapely deliberately removed.
# Vectorization uses rasterio.features.shapes + fiona only.
# See: plgeoadaptels.vectorize module.

[project.urls]
Homepage = "https://github.com/igorpawelec/plgeoadaptels"
Repository = "https://github.com/igorpawelec/plgeoadaptels"
Issues = "https://github.com/igorpawelec/plgeoadaptels/issues"

[project.scripts]
plgeoadaptels = "plgeoadaptels.cli:main"

[tool.setuptools.packages.find]
include = ["plgeoadaptels*"]
