[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plgeoadaptels"
version = "0.6.0"
description = "Scale-Adaptive Superpixels (Adaptels) for geospatial raster data"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Igor Pawelec"},
]
keywords = ["superpixels", "adaptels", "segmentation", "geospatial", "raster", "GIS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Dependencies intentionally left empty.
# In conda environments pip can break native libraries (GDAL, PROJ).
# Install manually:  conda install -c conda-forge numpy numba rasterio fiona
# What `import plgeoadaptels` actually needs, and nothing more. This was an
# empty list until 0.5.1, paired with a README telling people to use
# `pip install --no-deps` so that pip would not overwrite conda's
# GDAL/PROJ-linked builds. The `--no-deps` flag alone achieves that; the empty
# list additionally meant a plain `pip install plgeoadaptels` produced a
# package that could not be imported at all, which is how the rgeoadaptels CI
# job first noticed.
#
# Neither of these is linked against GDAL or PROJ, so the conflict the README
# warns about does not apply to them. rasterio, fiona and scipy are the ones
# that are, or that are optional, and they stay extras: all three are imported
# lazily inside the functions that need them, never at import time.
dependencies = [
    "numpy>=1.21",
    "numba>=0.56",
]

[project.optional-dependencies]
# Everything, including the GDAL-linked packages. Prefer conda for these.
all = ["numpy>=1.21", "numba>=0.56", "rasterio>=1.3", "fiona>=1.9", "scipy>=1.7"]
# enforce_connectivity() needs scipy.ndimage
connectivity = ["scipy>=1.7"]

# NOTE: geopandas and shapely deliberately removed.
# Vectorization uses rasterio.features.shapes + fiona only.
# See: plgeoadaptels.vectorize module.

[project.urls]
Homepage = "https://github.com/igorpawelec/plgeoadaptels"
Repository = "https://github.com/igorpawelec/plgeoadaptels"
Issues = "https://github.com/igorpawelec/plgeoadaptels/issues"

[project.scripts]
plgeoadaptels = "plgeoadaptels.cli:main"

[tool.setuptools.packages.find]
# Explicit, so setuptools never guesses from the flat layout: www/,
# test_data/, tests/ and examples/ stay out of the wheel, while any future
# subpackage is still picked up.
include = ["plgeoadaptels*"]
exclude = ["tests*", "examples*"]
